--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                         drumstick. Andouille spare ribs strip steak, beef ribs biltong shank fatback cupim. Frankfurter biltong
                         spare ribs filet mignon boudin sausage. Pork chop pork swine drumstick beef ribs.
                     </dd>
-                    <dt>Interests</dt>
+                    <dt>More Interests</dt>
                     <dd>Bacon ipsum dolor amet spare ribs ground round picanha drumstick cow venison pork loin. Andouille boudin
                         meatball, ground round turducken pork belly salami. Landjaeger beef ribs brisket t-bone prosciutto
                         drumstick. Andouille spare ribs strip steak, beef ribs biltong shank fatback cupim. Frankfurter biltong
                         spare ribs filet mignon boudin sausage. Pork chop pork swine drumstick beef ribs.
                     </dd>
-                    <dt>Interests</dt>
+                    <dt>Something else?</dt>
                     <dd>Bacon ipsum dolor amet spare ribs ground round picanha drumstick cow venison pork loin. Andouille boudin
                         meatball, ground round turducken pork belly salami. Landjaeger beef ribs brisket t-bone prosciutto
                         drumstick. Andouille spare ribs strip steak, beef ribs biltong shank fatback cupim. Frankfurter biltong
